--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
-            android:label="My Todo App"
+            android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@android:style/Theme.Material.Light.NoActionBar">
 
